--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "type": "module",
   "author": "",
   "contributors": [],
-  "version": "0.3.11",
+  "version": "0.4.0",
   "main": "main.mjs",
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@typhonjs-fvtt/runtime": "^0.0.23",
     "@typhonjs-fvtt/svelte-standard": "^0.0.23",
+    "@vitejs/plugin-vue": "^4.2.3",
     "svelte": "^3.57.0",
     "svelte-virtual-scroll-list": "^1.1.0"
   },
@@ -23,9 +24,11 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
     "prettier": "^2.8.7",
+    "sass": "^1.63.6",
     "svelte-dnd-action": "^0.9.18",
     "svelte-preprocess": "^5",
     "vite": "^4.4.0",
+    "vite-plugin-clean": "^1.0.0",
     "vite-plugin-static-copy": "^0.16.0",
     "vite-plugin-zip-file": "^2.1.0"
   },
