--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         id: sub_release_manifest_version
         uses: microsoft/variable-substitution@v1
         with:
-          files: 'src/module.json'
+          files: 'module.json'
         env:
           version: ${{github.event.release.tag_name}}
           url: https://github.com/${{github.repository}}
@@ -59,7 +59,7 @@ jobs:
 
       # Create a zip file with all files required by the module to add to the release
       #- run: zip -r ./module.zip module.json LICENSE module.js module.js.map style.css templates/ languages/ packs/ assets/
-      - run: zip -r ./module.zip dist/*
+
       - name: Update Release with Files
         id: create_version_release
         uses: ncipollo/release-action@v1
@@ -69,7 +69,7 @@ jobs:
           draft: false
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: './module.json, ./module.zip'
+          artifacts: './dist/module.json, ./package/module.zip'
           tag: ${{ github.event.release.tag_name }}
           body: ${{ github.event.release.body }}
 
