--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,120 +1,184 @@
-name: Release Creation
+import { svelte } from "@sveltejs/vite-plugin-svelte";
+import resolve from "@rollup/plugin-node-resolve"; // This resolves NPM modules from node_modules.
+import preprocess from "svelte-preprocess";
+import {
+  postcssConfig,
+  terserConfig,
+  typhonjsRuntime
+} from '@typhonjs-fvtt/runtime/rollup';
+import { viteZip } from 'vite-plugin-zip-file';
+import { viteStaticCopy } from 'vite-plugin-static-copy';
+import cleanPlugin from 'vite-plugin-clean';
+import { normalizePath } from 'vite';
+import path from 'path';
+import vue from '@vitejs/plugin-vue'
+// import sassDts from 'vite-plugin-sass-dts'
+// import hbsPlugin from './build/hbsPlugin';
+// import translationPlugin from './build/translationPlugin';
 
-on:
-  release:
-    types: [ published ]
+// ATTENTION!
+// Please modify the below variables: s_PACKAGE_ID and s_SVELTE_HASH_ID appropriately.
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
+// For convenience, you just need to modify the package ID below as it is used to fill in default proxy settings for
+// the dev server.
+const s_MODULE_ID = "token-factions";
+const s_PACKAGE_ID = "modules/"+s_MODULE_ID;
+const s_ENTRY_JAVASCRIPT = "main.mjs";
 
-      # Substitute the Manifest and Download URLs in the module.json
+// A short additional string to add to Svelte CSS hash values to make yours unique. This reduces the amount of
+// duplicated framework CSS overlap between many TRL packages enabled on Foundry VTT at the same time. 'ese' is chosen
+// by shortening 'essential-svelte-esm'.
+const s_SVELTE_HASH_ID = "ese";
 
-      - name: Substitute Manifest and Download Links For Versioned Ones
-        id: sub_release_manifest_version
-        uses: microsoft/variable-substitution@v1
-        with:
-          files: 'src/module.json'
-        env:
-          version: ${{github.event.release.tag_name}}
-          url: https://github.com/${{github.repository}}
-          manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
-          download: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/module.zip
+const s_COMPRESS = false; // Set to true to compress the module bundle.
+const s_SOURCEMAPS = true; // Generate sourcemaps for the bundle (recommended).
 
-      # for a FULL RELEASE
-      # - name: Substitute Manifest and Download Links For Versioned Ones
-      #   if: "!github.event.release.prerelease"
-      #   id: sub_release_manifest_version
-      #   uses: microsoft/variable-substitution@v1
-      #   with:
-      #     files: 'module.json'
-      #   env:
-      #     version: ${{github.event.release.tag_name}}
-      #     url: https://github.com/${{github.repository}}
-      #     manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
-      #     download: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/module.zip
+// EXPERIMENTAL: Set to true to enable linking against the TyphonJS Runtime Library module.
+// You must add a Foundry module dependency on the `typhonjs` Foundry package or manually install it in Foundry from:
+// https://github.com/typhonjs-fvtt-lib/typhonjs/releases/latest/download/module.json
+const s_TYPHONJS_MODULE_LIB = false;
 
-      # Substitute the Manifest and Download URLs in the module.json
-      # for a PRE RELEASE. Manifest pointing to live module.json on branch,
-      # which is updated after tag.
-      # - name: Substitute Manifest and Download Links For Versioned Ones
-      #   if: "github.event.release.prerelease"
-      #   id: sub_prerelease_manifest_version
-      #   uses: microsoft/variable-substitution@v1
-      #   with:
-      #     files: 'module.json'
-      #   env:
-      #     version: ${{github.event.release.tag_name}}
-      #     url: https://github.com/${{github.repository}}
-      #     manifest: https://raw.githubusercontent.com/${{github.repository}}/next/module.json
-      #     download: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/module.zip
+// Used in bundling particularly during development. If you npm-link packages to your project add them here.
+const s_RESOLVE_CONFIG = {
+  browser: false,
+  dedupe: ["svelte"],
+};
 
-      # Install packages.
-      - run: npm install
+export default () => {
+  /** @type {import('vite').UserConfig} */
+  return {
+    root: "src/", // Source location / esbuild root.
+    base: `/${s_PACKAGE_ID}/`, // Base module path that 30001 / served dev directory.
+    publicDir: false, // No public resources to copy.
+    cacheDir: "../.vite-cache", // Relative from root directory.
 
-      # Build distribution.
-      - run: npm run build
+    resolve: { conditions: ["import", "browser"] },
 
-      # Create a zip file with all files required by the module to add to the release
-      #- run: zip -r ./module.zip module.json LICENSE module.js module.js.map style.css templates/ languages/ packs/ assets/
+    esbuild: {
+      target: ['es2022', 'chrome100'],
+      keepNames: true   // Note: doesn't seem to work.
+    },
 
-      - name: Update Release with Files
-        id: create_version_release
-        uses: ncipollo/release-action@v1
-        with:
-          allowUpdates: true # Set this to false if you want to prevent updating existing releases
-          name: ${{ github.event.release.name }}
-          draft: false
-          prerelease: false
-          token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: './dist/module.json, ./package/module.zip'
-          tag: ${{ github.event.release.tag_name }}
-          body: ${{ github.event.release.body }}
+    css: {
+      // Creates a standard configuration for PostCSS with autoprefixer & postcss-preset-env.
+      postcss: postcssConfig({ compress: s_COMPRESS, sourceMap: s_SOURCEMAPS }),
+    },
 
-      # Create a release for this specific version
-      # - name: Update Release with Files
-      #   if: "!github.event.release.prerelease"
-      #   id: create_version_release
-      #   uses: ncipollo/release-action@v1
-      #   with:
-      #     allowUpdates: true # Set this to false if you want to prevent updating existing releases
-      #     name: ${{ github.event.release.name }}
-      #     draft: false
-      #     prerelease: false
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     artifacts: './module.json, ./module.zip'
-      #     tag: ${{ github.event.release.tag_name }}
-      #     body: ${{ github.event.release.body }}
+    // About server options:
+    // - Set to `open` to boolean `false` to not open a browser window automatically. This is useful if you set up a
+    // debugger instance in your IDE and launch it with the URL: 'http://localhost:30001/game'.
+    //
+    // - The top proxy entry redirects requests under the module path for `style.css` and following standard static
+    // directories: `assets`, `lang`, and `packs` and will pull those resources from the main Foundry / 30000 server.
+    // This is necessary to reference the dev resources as the root is `/src` and there is no public / static
+    // resources served with this particular Vite configuration. Modify the proxy rule as necessary for your
+    // static resources / project.
+    server: {
+      port: 29999,
+      open: "/game",
+      proxy: {
+        // Serves static files from main Foundry server.
+        [`^(/${s_PACKAGE_ID}/(fonts|assets|lang|languages|packs|styles|templates|style.css))`]:
+          "http://localhost:30000",
 
-      #  OR create a pre-release for this specific version
-      # - name: Update Release with Files
-      #   if: "github.event.release.prerelease"
-      #   id: create_version_prerelease
-      #   uses: ncipollo/release-action@v1
-      #   with:
-      #     allowUpdates: true # Set this to false if you want to prevent updating existing releases
-      #     name: ${{ github.event.release.name }}
-      #     draft: false
-      #     prerelease: true
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     artifacts: './module.json, ./module.zip'
-      #     tag: ${{ github.event.release.tag_name }}
-      #     body: ${{ github.event.release.body }}
+        // All other paths besides package ID path are served from main Foundry server.
+        [`^(?!/${s_PACKAGE_ID}/)`]: "http://localhost:30000",
 
-      #update next branch
-      # - name: Prepare repository
-      #   if: "github.event.release.prerelease"
-      #   run: |
-      #     git config --global user.name '${{github.actor}}'
-      #     git config --global user.email '${{github.actor}}@users.noreply.github.com'
-      #     git add module.json
-      #     git stash
-      #     git clean -f
-      #     git remote set-url origin "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY"
-      #     git fetch origin "next"
-      #     git switch -c "next" "origin/next"
-      #     git checkout stash module.json
-      #     git commit -m "${{github.event.release.tag_name}} manifest"
-      #     git push -f
+        // Enable socket.io from main Foundry server.
+        "/socket.io": { target: "ws://localhost:30000", ws: true },
+      },
+    },
+    build: {
+      outDir: normalizePath( path.resolve(__dirname, `./dist/${s_MODULE_ID}`)), // __dirname,
+      emptyOutDir: false,
+      sourcemap: s_SOURCEMAPS,
+      brotliSize: true,
+      minify: s_COMPRESS ? "terser" : false,
+      target: ['es2022', 'chrome100'],
+      terserOptions: s_COMPRESS ? { ...terserConfig(), ecma: 2022 } : void 0,
+      lib: {
+        entry: "./" + s_ENTRY_JAVASCRIPT,
+        formats: ["es"],
+        fileName: "module",
+      },
+    },
+
+    plugins: [
+      //   vue(),
+      //   hbsPlugin(),
+      //   translationPlugin('./src/lang', './dist/lang'),
+      viteStaticCopy({
+        targets: [
+          {
+            src: normalizePath(path.resolve(__dirname, './src/assets')) + '/[!.]*', // 1️
+            dest: normalizePath(path.resolve(__dirname, `./dist/${s_MODULE_ID}/assets`)), // 2️
+          },
+          {
+            src: normalizePath(path.resolve(__dirname, './src/images')) + '/[!.]*', // 1️
+            dest: normalizePath(path.resolve(__dirname, `./dist/${s_MODULE_ID}/images`)), // 2️
+          },
+          {
+            src: normalizePath(path.resolve(__dirname, './src/icons')) + '/[!.]*', // 1️
+            dest: normalizePath(path.resolve(__dirname, `./dist/${s_MODULE_ID}/icons`)), // 2️
+          },
+          {
+            src: normalizePath(path.resolve(__dirname, './src/templates')) + '/[!.]*', // 1️
+            dest: normalizePath(path.resolve(__dirname, `./dist/${s_MODULE_ID}/templates`)), // 2️
+          },
+          {
+            src: normalizePath(path.resolve(__dirname, './src/lang')) + '/[!.]*', // 1️
+            dest: normalizePath(path.resolve(__dirname, `./dist/${s_MODULE_ID}/lang`)), // 2️
+          },
+          {
+            src: normalizePath(path.resolve(__dirname, './src/languages')) + '/[!.]*', // 1️
+            dest: normalizePath(path.resolve(__dirname, `./dist/${s_MODULE_ID}/languages`)), // 2️
+          },
+          {
+            src: normalizePath(path.resolve(__dirname, './src/styles')) + '/[!.]*', // 1️
+            dest: normalizePath(path.resolve(__dirname, `./dist/${s_MODULE_ID}/styles`)), // 2️
+          },
+          {
+            src: normalizePath(path.resolve(__dirname, './src/packs')) + '/[!.]*', // 1️
+            dest: normalizePath(path.resolve(__dirname, `./dist/${s_MODULE_ID}/packs`)), // 2️
+          },
+          {
+            src: normalizePath(path.resolve(__dirname, './src/module.json')), // 1️
+            dest: normalizePath(path.resolve(__dirname, `./dist/${s_MODULE_ID}/`)), // 2️
+          },
+        ],
+      }),
+      svelte({
+        compilerOptions: {
+          // Provides a custom hash adding the string defined in `s_SVELTE_HASH_ID` to scoped Svelte styles;
+          // This is reasonable to do as the framework styles in TRL compiled across `n` different packages will
+          // be the same. Slightly modifying the hash ensures that your package has uniquely scoped styles for all
+          // TRL components and makes it easier to review styles in the browser debugger.
+          cssHash: ({ hash, css }) => `svelte-${s_SVELTE_HASH_ID}-${hash(css)}`,
+        },
+        preprocess: preprocess(),
+        onwarn: (warning, handler) => {
+          // Suppress `a11y-missing-attribute` for missing href in <a> links.
+          // Foundry doesn't follow accessibility rules.
+          if (warning.message.includes(`<a> element should have an href attribute`)) {
+            return;
+          }
+          
+          // Let Rollup handle all other warnings normally.
+          handler(warning);
+        },
+      }),
+      resolve(s_RESOLVE_CONFIG), // Necessary when bundling npm-linked packages.     
+      
+      // When s_TYPHONJS_MODULE_LIB is true transpile against the Foundry module version of TRL.
+      s_TYPHONJS_MODULE_LIB && typhonjsRuntime(),
+
+      viteZip({
+        folderPath: path.resolve(__dirname, `./dist/${s_MODULE_ID}`),
+        outPath: path.resolve(__dirname, './package'),
+        zipName: 'module.zip',
+        enabled: true
+      }),
+      cleanPlugin()
+    ]
+  };
+};
