--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,9 +57,11 @@ jobs:
       # Build distribution.
       - run: npm run build
 
+      - run: mv -v ./dist/* ./package/
+
       # Create a zip file with all files required by the module to add to the release
       #- run: zip -r ./module.zip module.json LICENSE module.js module.js.map style.css templates/ languages/ packs/ assets/
-      - run: zip -r ./module.zip dist/*
+      - run: zip -r ./package/module.zip ./package/*
       
       - name: Update Release with Files
         id: create_version_release
@@ -70,7 +72,7 @@ jobs:
           draft: false
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: './src/module.json, ./module.zip'
+          artifacts: './src/module.json, ./package/module.zip'
           tag: ${{ github.event.release.tag_name }}
           body: ${{ github.event.release.body }}
 
