--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,13 @@ jobs:
 
       # Create a zip file with all files required by the module to add to the release
       #- run: zip -r ./module.zip module.json LICENSE module.js module.js.map style.css templates/ languages/ packs/ assets/
-      - run: zip -r ./package/module.zip ./package/*
+      # - run: zip -r ./package/module.zip ./package/*
+
+      # && ensures that zip only runs if the directory was correctly changed, 
+      # and the parentheses run everything in a subshell, so the current directory 
+      # is restored at the end. Using OLDPWD avoids having to calculate the relative path to package.zip.
+      # https://unix.stackexchange.com/questions/385405/zip-all-files-and-subfolder-in-directory-without-parent-directory
+      - run: (cd package && zip -r "$OLDPWD/module.zip" .)
       
       - name: Update Release with Files
         id: create_version_release
