--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
       # and the parentheses run everything in a subshell, so the current directory 
       # is restored at the end. Using OLDPWD avoids having to calculate the relative path to package.zip.
       # https://unix.stackexchange.com/questions/385405/zip-all-files-and-subfolder-in-directory-without-parent-directory
-      - run: (cd package && zip -r "$OLDPWD/module.zip" .)
+      - run: (cd package && zip -r "$OLDPWD/module.zip" . && mv "$OLDPWD/module.zip" ./package/)
       
       - name: Update Release with Files
         id: create_version_release
