--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "contributors": [],
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@typhonjs-fvtt/runtime": "^0.0.23",
     "@typhonjs-fvtt/svelte-standard": "^0.0.23",
     "@vitejs/plugin-vue": "^4.2.3",
@@ -22,6 +24,7 @@
     "@typhonjs-config/eslint-config": "^0.3.0",
     "eslint": "^8",
     "husky": "^8.0.3",
+    "jquery": "^3.6.4",
     "lint-staged": "^13.2.1",
     "prettier": "^2.8.7",
     "sass": "^1.63.6",
@@ -29,6 +32,7 @@
     "svelte-preprocess": "^5",
     "vite": "^4.4.0",
     "vite-plugin-clean": "^1.0.0",
+    "vite-plugin-run": "^0.4.1",
     "vite-plugin-static-copy": "^0.16.0",
     "vite-plugin-zip-file": "^2.1.0"
   },
