--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "token-factions",
   "title": "Token Factions",
   "description": "Generate token bases based on token disposition or actor folder color.",
-  "version": "0.4.4",
-  "main": "main.mjs",
+  "version": "0.4.5",
+  "main": "module.js",
   "license": "SEE LICENSE IN LICENSE",
   "private": true,
   "type": "module",
