--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "token-factions",
 	"title": "Token Factions",
 	"description": "Generate token bases based on token disposition or actor folder color.",
-	"version": "0.5.0",
+	"version": "0.5.1",
 	"main": "module.js",
 	"license": "SEE LICENSE IN LICENSE",
 	"private": true,
@@ -51,6 +51,7 @@
 	],
 	"scripts": {
 		"build": "vite build",
+		"build:watch": "vite build --watch",
 		"dev": "vite",
 		"eslint": "eslint .",
 		"prepare": "husky install",
